fixes #2 - Fixes # 9 - Fixes #21 - Fixes #8 - Fixes #13 - Fixes #19 - Fixes #12; Converted gridview to recyclerview, fiddled a bit with the toolbar, fixed the click, and allowed for smoother scrolling by caching the images as soon as their url is known.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<GridView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/movieGridView"
+<LinearLayout android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:numColumns="2"
-    android:columnCount="2"
-    android:layout_gravity="center"
-    android:stretchMode="columnWidth"
-    android:scrollbarAlwaysDrawHorizontalTrack="false"
-    android:scrollbarAlwaysDrawVerticalTrack="false"
-    android:alignmentMode="alignBounds">
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-</GridView>
+            <Toolbar
+                android:layout_width="match_parent"
+                android:layout_height="64sp"
+                android:background="#FFFFFF"
+                android:layout_marginBottom="8dp"
+                >
+            </Toolbar>
+    <android.support.v7.widget.RecyclerView
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:id="@+id/rv_movie_grid"
+        android:background="#000000"
+        xmlns:android="http://schemas.android.com/apk/res/android">
+
+
+    </android.support.v7.widget.RecyclerView>
+
+</LinearLayout>
