--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,9 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:title="@string/Refresh"
-        android:icon="@mipmap/ic_autorenew_black_24dp"
+        android:title="Popular"
         android:orderInCategory="1"
         app:showAsAction="ifRoom"
-        android:id="@+id/action_refresh"/>
+        android:id="@+id/action_sort"/>
 </menu>
