Fixes #3 - Fixes #7 - Fixes #24 - Fixes #25 ; Added detail activity and intents. MovieObjects are parcelable and passed between activities. Data is loaded into the new detail activity. Conforms to specs.

--- a/app/src/main/res/layout/movie_detail.xml
+++ b/app/src/main/res/layout/movie_detail.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:context="com.example.pro.watts_hut.MovieDetails">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -20,13 +22,12 @@
                 android:layout_height="match_parent">
 
                 <ImageView
-                    android:layout_width="167dp"
-                    android:layout_height="211dp"
+                    android:layout_width="@dimen/width_thumbnail"
+                    android:layout_height="@dimen/height_thumbnail"
                     app:srcCompat="@android:color/transparent"
-                    android:id="@+id/imageView"
+                    android:id="@+id/detail_thumbnail"
                     android:adjustViewBounds="true"
-                    android:cropToPadding="true"
-                    android:padding="6dp" />
+                    android:cropToPadding="true"  />
 
                 <LinearLayout
                     android:orientation="vertical"
@@ -38,7 +39,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/textView"
+                        android:id="@+id/movie_title"
                         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                         android:gravity="center"
                         android:textSize="20sp"
@@ -48,7 +49,6 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/textView3"
                         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                         android:gravity="top|left"
                         android:layout_marginTop="20dp"
@@ -59,7 +59,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/textView7"
+                        android:id="@+id/release_date"
                         android:textAppearance="@style/TextAppearance.AppCompat.Small"
                         android:gravity="top|left"
                         android:layout_marginTop="6dp"
@@ -69,7 +69,6 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/textView6"
                         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                         android:gravity="top|left"
                         android:layout_marginTop="20dp"
@@ -81,7 +80,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/textView5"
+                        android:id="@+id/ratings"
                         android:textAppearance="@style/TextAppearance.AppCompat.Small"
                         android:gravity="top|left"
                         android:layout_marginTop="6dp"
@@ -94,10 +93,10 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView8"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:gravity="top|left"
                 android:layout_marginTop="6dp"
+                android:layout_marginLeft="6dp"
                 android:text="Synopsis"
                 android:padding="6dp"
                 android:fontFamily="casual" />
@@ -105,13 +104,13 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView9"
+                android:id="@+id/synopsis"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:gravity="top|left"
                 android:layout_marginTop="6dp"
-                android:layout_marginLeft="15dp"
+                android:layout_marginLeft="12dp"
                 tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lobortis nisl at metus vestibulum, a dapibus diam tempor. Sed a nisl eu justo volutpat ultricies. Maecenas eget velit iaculis, accumsan felis non, porta orci. Etiam odio eros, elementum id congue et, vulputate efficitur neque. Nullam vestibulum metus vel justo sollicitudin, vel volutpat est vulputate. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed sollicitudin, arcu eu consequat faucibus, massa metus laoreet turpis, et lobortis libero sapien ac magna. Maecenas sodales ultricies mollis. Sed rutrum leo pharetra blandit condimentum. Praesent mattis velit purus, at condimentum arcu pretium in.  Integer pharetra nulla suscipit ex sollicitudin, ac laoreet tellus egestas. In hac habitasse platea dictumst. Nunc rhoncus blandit rutrum. Proin eget luctus risus, nec accumsan mi. Maecenas congue, nisi vel dapibus sollicitudin, leo odio aliquet erat, eget tempus velit lorem eu nunc. Vestibulum sed turpis tristique, scelerisque ipsum ac, placerat elit. Vestibulum maximus aliquet ultrices. In eget elit ipsum. Nulla facilisi. Integer dapibus nibh nunc, vitae dignissim metus cursus sit amet. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pulvinar vel nisl at cursus. Nunc pharetra, quam ut iaculis varius, dui libero elementum velit, eget fermentum felis ante eget justo. Donec consectetur molestie est vitae rutrum."
-                android:layout_marginRight="15dp" />
+                android:layout_marginRight="12dp" />
 
         </LinearLayout>
     </ScrollView>
